<resources>
    <string name="app_name">Shop Now</string>
    <string name="let_s_choose">Let\'s Choose</string>
    <string name="your_own_style">Your Own Style</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account ? <b>Login</b></string>
    <string name="dont_have_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="see_more">See more</string>
    <string name="for_sale">For Sale</string>
    <string name="rs">Rs.</string>
    <string name="gf32498">GF32498</string>
    <string name="_0">0</string>
    <string name="size">Size</string>
    <string name="m">M</string>
    <string name="x">X</string>
    <string name="xl">XL</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_wish_list">Add to Wish list</string>
    <string name="color2">Color</string>
    <string name="favourites">Favourites</string>
    <string name="see_your_favourites_here">See your favourites here</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="sub_total">Sub total : </string>
    <string name="check_out">Check Out</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="logout">logout</string>
    <string name="name">Name</string>
    <string name="email2">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
</resources>