<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:fillViewport="true"
    android:background="@drawable/splash_screen_gradient"
    tools:context=".activities.SplashScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_36sdp"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/black"
            android:text="@string/let_s_choose"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/your_own_style"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_390sdp"
            android:src="@drawable/splash_img"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_14sdp"
            android:contentDescription="@string/todo" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            app:rippleColor="@color/white"
            android:text="@string/get_started"
            android:textStyle="bold"
            android:layout_marginTop="-4dp"
            android:textSize="@dimen/_14ssp"/>
    </LinearLayout>
</ScrollView>