<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    tools:context=".activities.EditProfile">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImg"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/user_placeholder"/>

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_12ssp"
        android:hint="@string/name"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:singleLine="true"
        android:background="@drawable/edittext_bg"
        android:autofillHints="" />


    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_12ssp"
        android:hint="@string/email2"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:singleLine="true"
        android:background="@drawable/edittext_bg"
        android:autofillHints="" />


    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_12ssp"
        android:hint="@string/phone_no"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="20"
        android:singleLine="true"
        android:background="@drawable/edittext_bg"
        android:autofillHints="" />



    <com.example.myloadingbutton.MyLoadingButton
        android:id="@+id/SaveBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        app:rippleColor="@color/white"
        app:mlb_label="@string/save"
        app:mlb_loaderColor="@color/white"
        android:textStyle="bold"
        app:mlb_backgroundColor="@color/pink"
        app:cornerRadius="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_14ssp"/>

</LinearLayout>