<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_6ssp"
            android:textSize="@dimen/_19ssp"/>



        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:hint="@string/email"
            android:padding="@dimen/_10sdp"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_18sdp"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textSize="@dimen/_12ssp"
            android:singleLine="true"
            android:background="@drawable/edittext_bg"
            android:autofillHints="" />




        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textSize="@dimen/_12ssp"
            android:singleLine="true"
            android:background="@drawable/edittext_bg"
            android:autofillHints="" />

        <com.example.myloadingbutton.MyLoadingButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            app:rippleColor="@color/white"
            app:mlb_label="@string/login"
            app:mlb_loaderColor="@color/white"
            android:textStyle="bold"
            app:mlb_backgroundColor="@color/pink"
            app:cornerRadius="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:textSize="@dimen/_14ssp"/>


        <TextView
            android:id="@+id/gotoSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/dont_have_account"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"/>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>


        <TextView
            android:id="@+id/loginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:maxLength="30"
            android:singleLine="true"
            android:background="@drawable/edittext_bg"
            android:autofillHints=""
            app:drawableStartCompat="@drawable/google" />

    </LinearLayout>

</ScrollView>