<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Cart">

    <TextView
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/cart"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/sfgsf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/_12ssp"
        android:text="@string/continue_shopping"
        android:paddingStart="@dimen/_10sdp"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dsfa"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/sub_total"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp"/>


        <TextView
            android:id="@+id/totalRs"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:textSize="@dimen/_14ssp"
            android:textColor="@android:color/holo_red_light"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRV"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkOutBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/_917271"
                android:text="@string/check_out"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</LinearLayout>