<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_8sdp"
    android:background="@color/white">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/productImage"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_130sdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/dresss"
        android:scaleType="centerCrop"
        android:padding="@dimen/_8sdp"
        app:riv_corner_radius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/productImage"
        app:layout_constraintStart_toStartOf="@+id/productImage"
        app:layout_constraintTop_toBottomOf="@+id/productImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="start"
                android:maxLines="2"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp" />


            <TextView
                android:id="@+id/productCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:maxLines="2"
                android:padding="@dimen/_4sdp"
                android:text="@string/gf32498"
                android:textSize="@dimen/_10ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_4sdp">

                <TextView
                    android:id="@+id/rs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="2"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/rs"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="2"
                    android:padding="@dimen/_3sdp"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>